Add support for a file-upload style API
